BUGFIX | img stretch on :more tree

--- a/wp-content/themes/ecp-child/amadded/assets/scss/plugins/_draw-attention.scss
+++ b/wp-content/themes/ecp-child/amadded/assets/scss/plugins/_draw-attention.scss
@@ -63,7 +63,7 @@
 
           img {
             width: 100%;
-            height: auto;
+            height: auto !important;
           }
         }
         p:empty {
